// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchComponent getFieldRowsFromSearchQuery should process empty search query 1`] = `
Array [
  Object {
    "label": "",
    "searchField": "0",
    "value": "",
  },
]
`;

exports[`SearchComponent getFieldRowsFromSearchQuery should process missing label 1`] = `
Array [
  Object {
    "label": "",
    "searchField": "rek_updated_date",
    "value": Object {},
  },
]
`;

exports[`SearchComponent getSearchQuery should construct search query 1`] = `
Object {
  "activeFacets": Object {
    "filters": Object {},
    "ranges": Object {},
    "showOpenAccessOnly": true,
  },
  "page": 1,
  "pageSize": 20,
  "searchMode": "advanced",
  "searchQueryParams": Object {
    "all": "i feel lucky",
    "rek_display_type": undefined,
  },
  "sortBy": "score",
  "sortDirection": "Desc",
}
`;

exports[`SearchComponent parseDateRange should return date range 1`] = `
Object {
  "from": "2019-01-30T14:00:00.000Z",
  "to": "2019-02-11T14:00:00.000Z",
}
`;

exports[`SearchComponent should add one row for advanced search 1`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "all",
          "value": "i feel lucky",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should add one row for advanced search 2`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "all",
          "value": "i feel lucky",
        },
        Object {
          "searchField": "0",
          "value": "",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should display simple search with query string 1`] = `
<Fragment>
  <SimpleSearchComponent
    isInHeader={false}
    onInvalidSearch={[Function]}
    onSearch={[Function]}
    onSearchTextChange={[Function]}
    onToggleSearchMode={[Function]}
    searchText=""
    showAdvancedSearchButton={false}
    showMobileSearchButton={false}
    showPrefixIcon={false}
    showSearchButton={false}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should display simple search with query string 2`] = `
<Fragment>
  <SimpleSearchComponent
    isInHeader={false}
    onInvalidSearch={[Function]}
    onSearch={[Function]}
    onSearchTextChange={[Function]}
    onToggleSearchMode={[Function]}
    searchText=""
    showAdvancedSearchButton={false}
    showMobileSearchButton={false}
    showPrefixIcon={false}
    showSearchButton={false}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should handle simple search text change 1`] = `
<Fragment>
  <SimpleSearchComponent
    isInHeader={false}
    onInvalidSearch={[Function]}
    onSearch={[Function]}
    onSearchTextChange={[Function]}
    onToggleSearchMode={[Function]}
    searchText=""
    showAdvancedSearchButton={false}
    showMobileSearchButton={false}
    showPrefixIcon={false}
    showSearchButton={false}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should remove one row from advanced search 1`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "all",
          "value": "i feel lucky",
        },
        Object {
          "label": "",
          "searchField": "rek_title",
          "value": "remove rek title field",
        },
        Object {
          "label": "",
          "searchField": "docTypes",
          "value": Array [],
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should remove one row from advanced search 2`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "all",
          "value": "i feel lucky",
        },
        Object {
          "label": "",
          "searchField": "docTypes",
          "value": Array [],
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should render default view 1`] = `
<Fragment>
  <SimpleSearchComponent
    isInHeader={false}
    onInvalidSearch={[Function]}
    onSearch={[Function]}
    onSearchTextChange={[Function]}
    onToggleSearchMode={[Function]}
    searchText=""
    showAdvancedSearchButton={false}
    showMobileSearchButton={false}
    showPrefixIcon={false}
    showSearchButton={false}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should render default view with advanced search 1`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "0",
          "value": "",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should render in advanced search and take in consideration isOpenAccessInAdvancedMode changes 1`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "0",
          "value": "",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={true}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should render simple search even if it says is advanced, if in header 1`] = `
<Fragment>
  <SimpleSearchComponent
    isInHeader={true}
    onInvalidSearch={[Function]}
    onSearch={[Function]}
    onSearchTextChange={[Function]}
    onToggleSearchMode={[Function]}
    searchText=""
    showAdvancedSearchButton={false}
    showMobileSearchButton={false}
    showPrefixIcon={false}
    showSearchButton={false}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should render with a class "header" for use in AppBar 1`] = `
<Fragment>
  <SimpleSearchComponent
    isInHeader={true}
    onInvalidSearch={[Function]}
    onSearch={[Function]}
    onSearchTextChange={[Function]}
    onToggleSearchMode={[Function]}
    searchText=""
    showAdvancedSearchButton={false}
    showMobileSearchButton={false}
    showPrefixIcon={false}
    showSearchButton={false}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should reset advanced search 1`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "all",
          "value": "i feel lucky",
        },
        Object {
          "label": "",
          "searchField": "rek_title",
          "value": "global warming",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={true}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should reset advanced search 2`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "searchField": "0",
          "value": "",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={
      Object {
        "from": 0,
        "to": 0,
      }
    }
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should toggle advanced search to minimised view 1`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "0",
          "value": "",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should toggle advanced search to minimised view 2`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "0",
          "value": "",
        },
      ]
    }
    isMinimised={true}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should toggle open access for advanced search 1`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "0",
          "value": "",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should toggle open access for advanced search 2`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "0",
          "value": "",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={true}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should toggle search to minimised view of advanced search 1`] = `
<Fragment>
  <SimpleSearchComponent
    isInHeader={false}
    onInvalidSearch={[Function]}
    onSearch={[Function]}
    onSearchTextChange={[Function]}
    onToggleSearchMode={[Function]}
    searchText=""
    showAdvancedSearchButton={false}
    showMobileSearchButton={false}
    showPrefixIcon={false}
    showSearchButton={false}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should toggle search to minimised view of advanced search 2`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "0",
          "value": "",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should update advanced search row on search text changed 1`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "all",
          "value": "i feel lucky",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should update advanced search row on search text changed 2`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "all",
          "value": "i feel more lucky",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should update date range filter 1`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "0",
          "value": "",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should update date range filter 2`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "0",
          "value": "",
        },
        Object {
          "label": "",
          "searchField": "rek_created_date",
          "value": "[2000 - 2001]",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should update date range filter 3`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "0",
          "value": "",
        },
        Object {
          "label": "",
          "searchField": "rek_created_date",
          "value": "[2000 - 2005]",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should update doc type values 1`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "0",
          "value": "",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should update doc type values 2`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={
      Array [
        317,
        123,
      ]
    }
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "0",
          "value": "",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should update year range filter 1`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "0",
          "value": "",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={Object {}}
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;

exports[`SearchComponent should update year range filter 2`] = `
<Fragment>
  <AdvancedSearchComponent
    createdRange={Object {}}
    docTypes={Array []}
    fieldRows={
      Array [
        Object {
          "label": "",
          "searchField": "0",
          "value": "",
        },
      ]
    }
    isMinimised={false}
    isOpenAccess={false}
    onAdvancedSearchReset={[Function]}
    onAdvancedSearchRowAdd={[Function]}
    onAdvancedSearchRowChange={[Function]}
    onAdvancedSearchRowRemove={[Function]}
    onSearch={[Function]}
    onToggleMinimise={[Function]}
    onToggleOpenAccess={[Function]}
    onToggleSearchMode={[Function]}
    showUnpublishedFields={false}
    updateDateRange={[Function]}
    updateDocTypeValues={[Function]}
    updateYearRangeFilter={[Function]}
    updatedRange={Object {}}
    yearFilter={
      Object {
        "from": "2000",
        "to": "2003",
        "valid": true,
      }
    }
  />
  <ForwardRef(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message=""
    open={false}
  />
</Fragment>
`;
